parking-money.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: parking-money-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parking-money
  template:
    metadata:
      name: parking-money-pod
      labels:
        app: parking-money
    spec:
      containers:
        - name: parking-money-alipay-container
          image: yindaheng98/parking-money-alipay
          ports:
            - containerPort: 3001
        - name: parking-money-app-container
          image: yindaheng98/parking-money-app
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: configmap-app
              mountPath: /home/node/app/controllers/设置.json
            - name: parking-money-pic
              mountPath: /home/node/app/public/images
        - name: parking-money-python-container
          image: yindaheng98/parking-money-python
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: parking-money-pic
              mountPath: /usr/src/app/images
      volumes:
        - name: configmap-app
          configMap:
            name: parking-money-config-app
  volumeClaimTemplates:
    - metadata:
        name: parking-money-pic
      spec:
        accessModes:
          - ReadWriteMany
        storageClassName: ssd
        resources:
          requests:
            storage: 20Gi
        selector:
          matchLabels:
            alicloud-pvname: pv-parking-money-pic
