service-parking-money.yaml
apiVersion: v1
kind: Service
metadata:
  name: parking-money
spec:
  selector:
    app: parking-money
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
